# frozen_string_literal: true

class Student_list_data_worker
  private_class_method :new

  def get_student_by_id(id)
  end

  def get_k_n_student_short_list(k, n, data_list = nil)
  end

  def insert_student(student)
  end

  def replace_by_id(id, student)
  end

  def drop_by_id(id)
  end

  def get_students_count
  end
end
